--- a/3wikijournal.html
+++ b/3wikijournal.html
@@ -1,5 +1,12 @@
 =3 Basic Bioinformatics=
 ==3.6 Storing Data==
+
+<div class="time-estimate">
+Time estimated: 3 h; taken > 3 h; date started: 2019-10-17; date completed: 2019-10-20
+
+~~~~
+</div>
+
 ===3.6.1 Data representation===
 ;Bits: The most elementary representation of data (0 or 1)
 
@@ -28,13 +35,88 @@
 ;Useful commands:
 :* rm(): remove object from memory
 :* order(x): returns a vector of array indices of x ordered based on the items in x
+:* file.show(<path>): display plain text file specified by <path>(string)
+:* unlist(<list>): flatten/simplify <list> into a vector
 
 ;Objectives:
 :* Learn how to build a database in R (in terms of a list of data frames)
 
 ;Activity 1 - Build a database of philosophers
 
-;Language: entity, instance of entity OR item
+;Activity 2 - Use JSON to organize database for Mbp1-like proteins
+R-package: jsonlite
+* Useful functions:
+:* fromJSON(<path>): read and parse from .json file specified by <path>(string) and returns a data frame
+:* dbSanitizeSequence(): for parsing. Clean-up and returns a single string of one-letter code protein sequence (all uppercase)
+:* dbInit(): generates a list of data frames to represent the relational database
+
+;Activity 3 - Find a protein from MYSPE most similar to Mbp1 to be added to the database
+1. To find such protein, BLAST: https://blast.ncbi.nlm.nih.gov/Blast.cgi
+2. Protein BLAST
+3. Query Sequence = NP_010227, Database = Reference Proteins (refseq_protein), Organism = Eremothecium cymbalariae
+4. BLAST!
+
+7 sequences found that produce significant alignments. The first sequence has E-value rounded to 0.0 (Sequence_ID XP_003645298.1)
+
+Link to the protein: https://www.ncbi.nlm.nih.gov/protein/XP_003645298.1?report=genbank&log$=protalign&blast_rank=1&RID=UT6SVB5U014
+
+Link to the organism: https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=931890
+
+;Activity 4 - Put information pertaining to MYSPE into JSON files
+1. Find UniprotID at https://www.uniprot.org/mapping/
+2. Query XP_003645298 from RefSeq Protein to UniProtKB
+
+The UniprotID is G8JQ18
+
+3. To get a protein sequence, copy from the NCBI protein info page and use <code>dbSanitizeSequence()</code>
+4. To store in JSON, use the following script:
+
+<source lang="R">
+lengthToLookNice <- 70
+
+MYSEQ <- "        1 msstsvasrd qiysakysgv evyefihptg simkrkaddw vnathilkaa kfakakrtri
+       61 lekevikdih ekvqggfgky qgtwvpldia rrlaekfdvl eelrplfdfs qrdgsasppq
+      121 apkhhhasrs dstkkgtgks psgalnnasg svipkrrgrp prskkldrip asgdaalqrs
+      181 rsdvtgfhkp sitistissh nlpsiqstlq rgvnideqqh yqdklqqqis qqkyeeldie
+      241 dglssdietn layiaegpvg snrlntqlmt gkeepvssss slpsspsdfs apvpfdtqrv
+      301 gsatspigam lprysmqsrp ptsdldqkvn dylaklvdyf insemqntna vpiellnpph
+      361 stpyidawid sehhtafhwa camgnlpive allqagashr avnhagetpl mrasmfhnsy
+      421 tkrtyprifq llqdtvfdid sqsqtvvhhi vkrrsntqsa lyyldvllsk ikdfspqyri
+      481 etlintqddk gntplhiaai ngdkkffqtl lgsgalstlk nydgvtadvf innkfsrtln
+      541 ysehsyhygn gtthspasts tgavitgpag aaaasasasf ihtgdmfpsq aatsvsraip
+      601 evinlmkdma dsyqglyqdr sqelqsikkm lksmnntvas vdikiletld ikkyeqigqt
+      661 meditqaide lqsrftvkqk clmnilekgq riqlqrline qeqeidkhqe esesksgpsi
+      721 npnlitgike lailqlrrka kikqmlellc gnskvqkfrk misqgtdmel devdnfldvi
+      781 lqqlnddnea kkinnpngvt"
+
+cleanSeq <- dbSanitizeSequence(MYSEQ)
+
+(seqLength <- nchar(cleanSeq))
+
+toStore <- character()
+i <- 0
+while (i*lengthToLookNice+1 <= seqLength) {
+    toStore[i+1] <- substr(cleanSeq, start=i*lengthToLookNice+1, stop=(i+1)*lengthToLookNice)
+    i <- i + 1
+}
+
+toStore
+</source>
+
+5. Create MYSPEtaxonomy.json with only one entry of MYSPE
+6. Both JSON files validated at https://jsonlint.com/
+
+;Activity 5 - Make an R script to create my own database
+<span style="color:red">'''Because I keep my makeProteinDB.R and JSON files in my own BCH1441 folder for my version control, I have to <code>source("../makeProteinDB.R")</code>'''</span>
+
+<span style="color:red">'''Because successfully sourcing ABC-createRefDB.R requires <code>getwd() == C:/Users/Wilson/Documents/BCH1441/ABC-units</code> in my RStudio setup, I have to setwd() after sourcing ABC-createRefDB.R or change all the paths appropriately'''</span>
+
+* Useful functions:
+:* View(<dataframe>): view dataframe in terms of a readable table in RStudio
+
+Protein sequence is correct. Copy and paste the whole sequence into Protein BLAST gives 100% match to the intended protein.
+
+
 
 ==3.5 Abstractions==
 
